SFDCProject/src/objects/Territory__c.object
<CustomObject>
    <description>Captures territory information</description>
    <fields>
        <fullName>End_Date_New__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_New__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <description>Territory Zipcode</description>
        <label>Zip Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_must_be_greater_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date_New__c  &gt;  End_Date_New__c</errorConditionFormula>
        <errorDisplayField>End_Date_New__c</errorDisplayField>
        <errorMessage>Start Date Must be greater than End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_must_be_greater_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date_New__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date_New__c</errorDisplayField>
        <errorMessage>Start Date must be greater than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_code_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Zip_code__c )</errorConditionFormula>
        <errorDisplayField>Zip_code__c</errorDisplayField>
        <errorMessage>Zip Code is required</errorMessage>
    </validationRules>
</CustomObject>